--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <p class="inicio">Empoderamento pessoal - Por Dentro e Por Fora.</p>
         <p class="inicio">Chegou o momento de se conectar com o seu valor Único!</p>
         <p class="inicio">Juntas desenvolvemos todo o seu potencial, para alcançar resultados a curto prazo<br>e uma estrutura que lhe permite ser feliz, aconteça o que acontecer na sua vida.</p>
-        <p class="inicio">Torne-se magnética para a vida dos seus sonhos, através de una nova forma de sentir, pensar e agir.</p>
+        <p class="inicio">Torne-se magnética para a vida dos seus sonhos, através de uma nova forma de sentir, pensar e agir.</p>
         <h3 class="question">Coach e mentora de empoderamento feminino</h3>
         <div class="resposta">
-        <p>Trabalho com uma <strong>metodologia única</strong>, não apenas a nível consciente, mas também<br>inconsciente, onde estao a maior parte dos bloqueios.</p>
+        <p>Trabalho com uma <strong>metodologia única</strong>, não apenas a nível consciente, mas também<br>inconsciente, onde estão a maior parte dos bloqueios.</p>
         <p>Utilizo técnicas de alto impacto de reprogramação emocional, ferramentas de PLN,<br>hipnose regressiva, yoga e coaching</p>
         </div>  
     </div>
@@ -74,11 +74,11 @@
     <p>É na infância que vamos começando a escrever a nossa história. Lembro-me de ouvir o meu pai dizer: <strong>Não basta ser, é preciso parecer!</strong></p>
     <p>Ao longo da vida, fui testemunhando a sabedoria por trás destas palavras, de tal forma que a incorporei no meu conceito de coaching e mentoring.</p>
     <p>Hoje, acrescento a esta sabedoria o seu lado b: <strong>Não basta parecer, é preciso ser!</strong></p>
-    <p>Vemos tantas pessoas bonitas, bem vestidas, a cuidarem do corpo e da sua imagem mas, por dentro, sem autoestima, autoconfiança, nem poder emocional que as sustente muito tempo num sucesso que alcançam por parecer... e, o contrário também acontece.</p>
-    <p>A vida desenvolve-se como um feedback de quem somos, não do que queremos ser. Para conseguirmos o que desejamos, precisamos primeiro de ser a pessoa coerente com essa vida. Depois, parecer , para que o mundo nos reconheça como tal. Abrem-se novas portas, surgem oportunidades, atraímos outras pessoas, novas relações e maior abundância.</p>
+    <p>Vemos tantas pessoas bonitas, bem vestidas, a cuidarem do corpo e da sua imagem mas, por dentro, sem autoestima, autoconfiança, nem poder emocional que as sustente muito tempo num sucesso que alcançam por parecer... E o contrário também acontece. Há quem não se valorize por fora mas, tem amor próprio, autoconfiança, inteligência emocional, e clareza sobre os seus objetivos, mas pode ter dificuldade em atingi-los porque não comunica o seu real valor através da imagem que passa aos outros.</p>
+    <p>A vida desenvolve-se como um feedback de quem somos, não do que queremos ser. Para conseguirmos o que desejamos, precisamos primeiro de ser a pessoa coerente com essa vida. Depois, parecer, para que o mundo nos reconheça como tal. Abrem-se novas portas, surgem oportunidades, atraímos outras pessoas, novas relações e maior abundância.</p>
     </div>
 </div>
-<h3>Gostaria de ganhar <i>skills</i> para ser e parecer mais?</h3>
+<h3>Gostaria de ganhar <i>skills</i> para ser e parecer a sua melhor versão?</h3>
 </div>
 <!-- END METODO-->
 
@@ -87,7 +87,7 @@
 <!-- SESSOES-->
 <div class="sessoes2">
   <h2>Sessões</h2>
-   <p>Podemos trabalhar todo o seu potencial ou focar em algumas partes, porque somos únicas e, como tal, cada caso é único.</p>
+   <p>Podemos trabalhar todo o seu potencial ou focar em algo específico, porque somos únicas e, como tal, cada caso é único.</p>
    <p>2 serviços distintos, mas que se complementam:</p>
     <div class="serparecer">
          
