--- a/sessoes.html
+++ b/sessoes.html
@@ -58,6 +58,7 @@
           <p>Sessões de 1h30, online o presencial.</p>
         </div>
       </div>
+      <p class="cent">Pacotes desenhados para aumentar o poder pessoal interior: um novo pensar, sentir e agir resulta como magia</p>
       <p class="cent"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdaCbz8O3d6olaqrdlyPHbFYN--wUxsPe8CvMAfL2ZztLkAQw/viewform" target="_blank"><button class="btn">Estou pronta!</button></a></p>
     </div>
     
@@ -88,6 +89,7 @@
          </div>
         </div>
       </div>
+      <p class="cent">Pacotes desenhados para acrescentar valor à sua imagem e postura</p>
       <p class="cent"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdaCbz8O3d6olaqrdlyPHbFYN--wUxsPe8CvMAfL2ZztLkAQw/viewform" target="_blank"><button class="btn otherbtn">Estou pronta!</button></a></p>
     </div>
      
