--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
               <a href="./sessoes.html"><li>Sessões</li></a>
               <a href="./eventos.html"><li>Eventos</li></a>
               <a href="./about.html"><li>Sobre mim</li></a>
-              <a href="https://www.simplyflow.pt/author/ines-cortez/" target="_blank"><li>Artigos</li></a>
+              <a href="https://www.simplyflow.pt/author/ines-cortez/" target="_blank"><li class="artigos">Artigos</li></a>
           </ul>
         </nav>
       </div>
@@ -31,7 +31,7 @@
 
 <!-- QUEM SOU -->
 <div class="texto">
-    <h3>Quem sou?</h3>
+    <h3>Sobre mim</h3>
 </div>
 <!-- END TEXTO-->
 
@@ -41,24 +41,73 @@
        <img src="./img/sobremim.png">
     </div>
     <div class="sobremim">
-         <p>Com um percurso profissional de 15 anos na área da Comunicação, como Coordenadora do Departamento de Comunicação da Plural Entertainment, produtora de ficção relacionada com a TVI. Desenvolvi não só as competências na área da comunicação, como um interesse e profundo conhecimento acerca do comportamento humano e do seu bem-estar, consigo mesmo e com o ambiente que o rodeia.</p>
-         <p>Atualmente sou Coach de desenvolvimento pessoal, interno e externo, dou Consultas individuais de Coaching. Organizo também Eventos de desenvolvimento pessoal e bem-estar. Escrevo artigos regulamente para a plataforma de saúde e bem-estar Simply Flow. Apresentadora de rubricas no canal de TV Digital Womanlife.sapo.pt</p>  
-         <p>Tenho formação de Coach nível Master, certificado pela We Create e Practitioner de PNL (programação neurolinguística) e certificada em Reprogramação Emocional. Com conhecimento sobre práticas de Yoga e meditação pelo curso livre de Introdução ao Yoga (FEFD, Universidade Lusófona). Formada em Consultoria e Coaching de imagem pela Ecole Supérieur de Relooking.</p>
-         <p>Trabalho o Desenvolvimento Pessoal, focando-me no autoconhecimento, autocuidado, autoestima, comunicação, poder emocional, autoconfiança, noção de valor próprio e as ferramentas para se sentir bem, com boa energia. Trabalho, também, a identidade visual e objetivos de imagem. </p>
-         <p>Acredito que o Autocuidado e o Amor Próprio são a génese de todo o amor. Quem não se ama e não se cuida, não consegue deixar-se amar, nem cuidar verdadeiramente de ninguém. Trabalhar o nosso valor próprio é a base para uma vida feliz!</p>
-         <p>Gosto de ser livre na procura de conhecimento, mas a credibilidade e qualidade estão sempre no meu radar.</p>
-         <p>Tenho formação de Coach nível Master, certificado pela We Create e Practitioner de PNL (programação neurolinguística) e certificada em Reprogramação Emocional. Com conhecimento sobre práticas de Yoga e meditação pelo curso livre de Introdução ao Yoga (FEFD, ternda Universidade Lusófona). Formada em Consultoria e Coaching de imagem pela Ecole Supérieur de Relooking.</p>
-         <p>As relações, o amor, a boa energia não sao instintos, são skills e precisam de ser aprendidos.</p>
-         <p>Não basta ser, é preciso parecer! Não basta parecer, é preciso ser!</p>
+         <p class="underline">Percurso profissional:</p>
+         <p>Com um percurso de 15 anos na área da Comunicação, como Coordenadora do Departamento de Comunicação da TVI/<i>Plural Entertainment</i>, desenvolvi nessas funções não competências na área da <strong>comunicação</strong>, como um interesse e profundo conhecimento acerca do <strong>comportamento humano</strong> e do seu bem-estar no ambiente que o rodeia, quer a nivel individual, quer em grupo.</p>
+         <p>Atualmente dedico-me exclusivamente a <strong>mentoria, coaching e terapia de empoderamento e desenvolvimento pessoal, por dentro e por fora</strong>.  Dou consultas individuais, organizo <strong>eventos</strong> relacionados com desenvolvimento pessoal, escrevo artigos regularmente para a plataforma de saúde e bem-estar <i>Simply Flow</i>_by Fátima Lopes. Participei no canal digital womanlife.pt como apresentadora e criadora de conteúdos, entre outros.</p>
+         <p><strong>Por dentro,</strong> trabalho o <strong>desenvolvimento pessoal</strong>, focando-me no <strong>autoconhecimento, reprogramação emocional, autocuidado, autoestima, comunicação, autoconfiança, noção de valor próprio</strong> e nas <strong>ferramentas para se sentir bem</strong>, com <strong>boa energia</strong>. Desta forma, resgatando ou fazendo nascer o verdadeiro <strong>empoderamento</strong>.</p>
+         <p><strong>Por fora</strong>, trabalho a <strong>identidade visual</strong> e os <strong>objetivos de imagem</strong> específicos de cada pessoa. A primeira etapa será sempre de autoconhecimento para que os objetivos se tornem claros.</p>
+         <p><strong>O meu propósito...</strong></p>
+         <p><strong>Acredito que o autocuidado e o amor próprio são a génese de todo o amor. Quem não se ama e não se cuida, não consegue deixar-se amar, nem cuidar verdadeiramente de ninguém. Trabalhar o nosso valor próprio e único é a base para uma vida feliz!</strong></p>
+         <p>É muito importante investir em desenvolvimento pessoal, porque as <strong>relações, o amor, a boa energia não são instintos, são <i>skills</i>, precisam de ser aprendidos e apreendidos.</strong></p>
+         <p>Aprender, pesquisar e ouvir tornaram-se a minha prioridade. Só assim poderia um dia ajudar-me a mim própria e inspirar os outros.</p>
+         <p>Comecei o caminho do autoconhecimento há muitos anos, como cliente de <i>coaching</i>. Comprei um pacote, por curiosidade, com o objetivo de descobrir o meu propósito de vida. Não sabia que existia um serviço assim, capaz de nos trazer tanta luz e, na prática, tanta transformação em tão pouco tempo! Em 3 meses alcancei resultados que nunca tinha imaginado.</p>
+         <p><strong>Apaixonei-me de tal forma pelo processo de Coaching, que descobri nele o propósito que tanto procurava!</strong></p>
+         <p>Encantada, nunca mais parei neste caminho. Mas como gosto de ser livre na procura de conhecimento, a credibilidade e qualidade dos conteúdos, estão sempre no meu radar. Por isso, estou em constante formação e atualização.</p>
+         <p><strong>A ciência da diferenciação Human Design tornou-se na grande base do meu trabalho, que é totalmente personalizado.</strong></p>
+         <p>Como dizia Steve Jobs, “Só conseguimos ligar os pontos quando olhamos para trás. Então temos de confiar que os pontos se ligarão algum dia no futuro. Temos de confiar em algo, instinto, vida, destino, karma, o que for”.</p>
+         <p>O Human Design trouxe-me a confirmação científica e a explicação para o que sentia. Sou uma projetora perfil 2/4. Muito resumidamente, isto significa que sou talhada para guiar os outros, tenho dons naturais que me permitem fazer isto de forma única.</p>
+         <p>Sei isto há pouco tempo, mas tornou-me mais apaixonada pela vida, é a minha ligação dos pontos quando olho para trás e vejo o percurso que fui fazendo, mudando de direção, seguindo o meu instinto para me direcionar no meu propósito de vida, que tanto procurava.</p>
+         <p><strong>Vivo hoje a vida que sonhei porque investi em mim e apliquei o conhecimento. A minha realização está, acima de tudo, em ver os resultados surgirem não só em mim própria, mas na vida de quem comigo se cruza profissionalmente.</strong></p>
+         <p>Sou apaixonada por desenvolvimento pessoal e vida saudável, mas sem fundamentalismos que prejudiquem os maiores prazeres da vida. Adoro exercício físico, meditação, alimentação saudável, beleza, harmonia, boa energia, estudar, dançar, arquitetura, decoração, uma boa conversa, rir, socializar, estar só comigo, passear na natureza, ser surpreendida e viajar. Todo o tipo de viagens, quer sejam para conhecer novas culturas, aprender algo novo, descansar, ou simplesmente mudar de ambiente, desde o urbano ao campestre até à praia.</p>
+         <p>Uma vez, num evento que organizei, desafiei as pessoas a dizerem quem são, sem falar na profissão, nome ou idade, porque somos muito mais do que isso… foi desta forma que me defini:</p>
+         <p>Eu sou...</p>
+         <p>Muito feminina, mas tenho o meu lado masculino bem desenvolvido: sensível, emocional e intuitiva; forte, disciplinada e mental.</p>
+         <p>Perder tempo é o que mais me frustra na vida.</p>
+         <p>Sou prática e fútil. Leve e intensa. Profunda e espiritual, cada vez mais!</p>
+         <p><strong>O meu propósito é ser uma guia, de luz e transformação. Ajudar as pessoas a sentirem-se realizadas e contribuir para a ordem, bondade e energia positiva no mundo.</strong></p>
+         <p><strong>Acredito que o Amor é a energia da vida e da cura e que o amor próprio é a génese do Amor.</strong></p>
+         <p>happINESs</p>
+         <p class="underline">Formação académica e profissional:</p>
+         <ul>
+             <li><strong>Licenciatura Design Visual, IADE.</strong> 1997 a 2001</li>
+             <li><strong>Pós-graduação em gestão, Universidade Católica Portuguesa.</strong> 2012 a 2013</li>
+             <li><strong>Estratégias para Lidar com os Media, Global Estratégias.</strong> 2010</li>
+             <li><strong>Escrita Criativa, Escrever, Escrever.</strong> 2010</li>
+             <li><strong>Gestão de Tempo, Let´s Talk Group.</strong> 2013</li>
+             <li><strong>Discurso em público, Toastmasters.</strong> 2014</li>
+             <li><strong>Técnicas de Representação, Thiago Justino.</strong> 2014</li>
+             <li><strong>O Poder da Marca, Palavras Ditas.</strong> 2014</li>
+             <li><strong>Construção de personagem e representação para câmara, Ilha D´Arte.</strong> 2015</li>
+             <li><strong>Gestão de Stress, Let´s Talk Group.</strong> 2016</li>
+             <li><strong>Coaching – Nível básico, We Create.</strong> 2017</li>
+             <li><strong>PNL, Instituto de Programação Neurolinguística PNL Portugal.</strong> 2010</li>
+             <li><strong>Comunicação nas Redes sociais, inMOTION.</strong> 2017</li>
+             <li><strong>Catalizadores, Daniel Sá Nogueira.</strong> 2017</li>
+             <li><strong>Coaching – Nível Master, We Create.</strong> 2018</li>
+             <li><strong>B-School, Marie Forleo.</strong> 2020</li>
+             <li><strong>The Copy Cure, Marie Forleo.</strong> 2020</li>
+             <li><strong>Curso Livre de Introdução ao Yoga, Lusófona.</strong> 2021</li>
+             <li><strong>Consultoria e Coaching de Imagem, Ecole Supérieure de Relooking.</strong> 2021</li>
+             <li><strong>Certificação em Reprogramação Emocional, CRAF Amanda Fitas.</strong> 2022</li>
+             <li><strong>Silva Ultramind System, Vishen Lakhiani.</strong> 2022</li>
+             <li><strong>Duality, Jeffrey Allen.</strong> 2022</li>
+             <li><strong>Rapid Transformation Hypnotherapy, Marisa Peer.</strong> 2023</li>
+             <li><strong>Life Visioning Mastery, Michael Beckwith.</strong> 2023</li>
+             <li><strong>Human Design, Ana Soares.</strong> 2023 (formação permanente)</li>
+             <li><strong>Dança e Emoções, Escola Holística Vip Brasil.</strong> 2023</li>
+             <li><strong>The 6 Phase Meditation, Vishen Lakhiani.</strong> 2023</li>
+             <li><strong>Picture Perfect, Paulius Staniunas.</strong> 2023</li>
+         </ul>
     </div>  
 </div>
 
-<div class="escrito">
+
+<!-- <div class="escrito">
     <h4>Escrito por mim...</h4>
-    <p></p><a href="https://www.simplyflow.pt/author/ines-cortez/" target="_blank">www.simplyflow.pt/author/ines-cortez/</a></p>
+    <p><a href="https://www.simplyflow.pt/author/ines-cortez/" target="_blank">www.simplyflow.pt/author/ines-cortez/</a></p>
     <img src="./img/simplyflow.jpeg">
     
-</div>
+</div>-->
 <!--- END DESCRIÇAO-->
 
 <!-- CONTACTOS -->
