--- a/eventos.html
+++ b/eventos.html
@@ -22,7 +22,7 @@
           <a href="./sessoes.html"><li>Sessões</li></a>
           <a href="./eventos.html"><li>Eventos</li></a>
           <a href="./about.html"><li>Sobre mim</li></a>
-          <a href="https://www.simplyflow.pt/author/ines-cortez/" target="_blank"><li>Artigos</li></a>
+          <a href="https://www.simplyflow.pt/author/ines-cortez/" target="_blank"><li class="artigos">Artigos</li></a>
       </ul>
     </nav>
   </div>
