--- a/tandc.html
+++ b/tandc.html
@@ -22,7 +22,7 @@
           <a href="./sessoes.html"><li>Sessões</li></a>
           <a href="./eventos.html"><li>Eventos</li></a>
           <a href="./about.html"><li>Sobre mim</li></a>
-          <a href="https://www.simplyflow.pt/author/ines-cortez/" target="_blank"><li>Artigos</li></a>
+          <a href="https://www.simplyflow.pt/author/ines-cortez/" target="_blank"><li class="artigos">Artigos</li></a>
       </ul>
     </nav>
   </div>
@@ -31,30 +31,51 @@
 
 <!-- Main -->
 <div class="pagtandc">
-    <h3>TERMOS & CONDIÇÕES</h3>
+    <h3>Política de Privacidade & Termos e Condições</h3>
 
-  <div class="tec">
-    <h4>MARCAÇÕES:</h4>
-    <p>Preencher o formulário
-    <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdaCbz8O3d6olaqrdlyPHbFYN--wUxsPe8CvMAfL2ZztLkAQw/viewform" target="_blank"><button class="btn">Aqui</button></a></p>
-    <p>OU</p>
-    <p>Enviar email para <a href="mailto:info@inescortez.com">info@inescortez.com</a> com a seguinte informação:</p>
-    <ul>
-        <li>Nome</li>
-        <li>Telefone (opcional)</li>
-        <li>Tipo de sessão</li>
-        <li>Proposta de data e hora, 3 alternativas</li>
-    </ul>
-    <h4>PAGAMENTO:</h4>
-    <p>MBWay: +351 919 025 690</p>
-    <p>As sessões apenas se consideram marcadas uma vez que o pagamento tenha sido efectuado</p>
-    <h4>CANCELAMENTO:</h4>
-    <ol>
-    <li>Poderá cancelar e pedir reembolso até 3 dias antes da data da sessão.</li>
-    <li>Até 24H antes poderá pedir alteração da data/hora da sessão. Neste caso o valor não será reembolsado.</li>
-    <li>A partir de 24H a remarcação será sujeita a disponibilidade e o valor nao será reembolsado.</li>
-    </ol>
+<!--PROTECÇAO DE DADOS & OTHERS-->
+<div class="tec">
+  <p>O uso deste site implica que reconhece e aceita o que está estabelecido no respetivo documento designado de Política de Privacidade & Termos e Condições.</p>
+  <p>Ao disponibilizar os seus dados pessoais, está a autorizar a recolha, uso e divulgação dos mesmos nos termos aqui definidos.</p>
+  <p>A Inês Cortez reserva-se no direito de alterar este documento sem aviso prévio, pelo que é recomendado que o consulte regularmente de forma a estar atualizado/a.</p>
+  <p>Inês Cortez pode ser contactada via e-mail para o endereço info@inescortez.com.</p>
+  
+  <h4>Proteção de dados:</h4>
+  <p>A proteção dos seus dados é importante, pelo que será garantida e respeitada segundo a legislação sobre proteção de dados pessoais vigente na União Europeia (RGPD).</p>
+
+  <h4>Informações que poderão ser recolhidas:</h4>
+  <p>Nome, data de nascimento, morada, contacto telefónico, email e/ou outros. Esta informação poderá ser recolhida quando responde a um questionário ou formulário inserido no site inescortez.com. Estes dados são recolhidos no âmbito da execução do contrato e poderão ser utilizados com finalidades de marketing tendo por base interesses legítimos, desde que não se oponha a tais comunicações. Para outras finalidades será sempre solicitado o seu consentimento para utilização dessa informação. Os dados pessoais recolhidos são tratados informaticamente, no estrito cumprimento da legislação de proteção de dados pessoais, sendo armazenados em base de dados e, em situação alguma, serão utilizados para outra finalidade que não sejam as já referidas.</p>
+  <p>Para que efeitos?</p>
+  <ul>
+    <li>Personalizar a sua experiência no <i>website</i>. As suas informações pessoais ajudam a responder da melhor forma às suas necessidades individuais.</li>
+    <li>Melhorar o <i>website</i> e as ofertas da plataforma de acordo com as informações e <i>feedback</i> recebido de todos aqueles que a utilizam.</li>
+    <li>Melhorar os serviços de coaching e coaching de imagem. A sua informação ajuda a melhorar os serviços criados para si.</li>
+    <li>Divulgar notícias, materiais promocionais, <i>workshops</i>, eventos ou trabalhos realizados, entregues através da internet, e-mail ou outros, de acordo com qualquer preferência de comunicação que tenha indicado.</li>
+  </ul>
+  <p>A sua informação, seja pública ou privada, não será cedida a qualquer outra entidade, sem o seu consentimento.</p>
+  <p>Todos os utilizadores e clientes têm direito de acesso, retificação, cancelamento, oposição , limitação do tratamento, portabilidade e revogação do consentimento. Caso pretenda, a qualquer momento, exercer algum dos seus direitos poderá fazê-lo através do e-mail info@inescortez.com. Tem também o direito de apresentar reclamação à autoridade de controlo, a CNPD.</p>
+  
+  <h4><i>Cookies:</i></h4>
+  <p>Poderão, com o seu consentimento, ser utilizados para perceber e memorizar as suas preferências, para futuras visitas ao <i>website</i> e compilar dados agregados sobre o tráfego e a interação no <i>website</i>, para que se possa oferecer melhores experiências e ferramentas no futuro.</p>
+  <p>Poderão ser contratados prestadores de serviços terceiros para ajudar a entender melhor os visitantes deste site. Esses prestadores de serviços não têm permissão para utilizar as informações recolhidas, exceto para ajudar a conduzir e melhorar os serviços enunciados no site.</p>
+  
+  <h4>Conteúdo incorporado de outros sites:</h4>
+  <p>Este site poderá incluir conteúdo incorporado noutros sites (vídeos, imagens, artigos, etc.) bem como ligações para outros sites que possam conter informações / ferramentas úteis para os utilizadores.</p>
+  <p>A política de privacidade deste site não é aplicada a sites de terceiros, pelo que, caso visite outro site a partir deste, deverá ler a política de privacidade do mesmo.</p>
+
+  <h4>Marcações e pagamentos:</h4>
+  <p>Para adquirir os serviços mencionados neste site, deverá preencher o formulário
+  <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdaCbz8O3d6olaqrdlyPHbFYN--wUxsPe8CvMAfL2ZztLkAQw/viewform" target="_blank"><button class="btn">Aqui</button></a></p>
+  <p>Ou</p>
+  <p>Enviar email para <a href="mailto:info@inescortez.com">info@inescortez.com</a></p>
+  <p>A aquisição de serviços pode ser feita na totalidade do valor ou em prestações (quando aplicável).<br>No caso de optar pelo pagamento em prestações, o incumprimento de uma prestação poderá prejudicar a prestação do serviço, por incumprimento do contrato.</p>
+   
+  <h4>Cancelamento:</h4>
+  <p>A primeira sessão não será reembolsada. As restantes, podem ser canceladas e reembolsadas até 3 dias antes da data marcada para as mesmas.</p>
+  <p>Até 24h antes, poderá pedir alteração da data/hora da sessão. Neste caso, o valor não será reembolsado.</p>
+  <p>A partir de 24h, a remarcação será sujeita a disponibilidade e o valor não será reembolsado.</p>
 </div>
+
 </div>
 
 <!-- CONTACTOS -->
